Added support for Java 8